Fix local app installation lifecycle
